fix readability, lighter backgrounds for printed code samples

--- a/builddoc/css/print.css
+++ b/builddoc/css/print.css
@@ -108,7 +108,7 @@ strong {
 }
 code {
     border-radius: 4px 4px 4px 4px;
-    background: #CCCCCC;
+    background: #B9E5FA;
     padding:2px 5px;
 }
 pre code {
